--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -24,7 +24,7 @@
           A video training series
           <a href="http://shop.oreilly.com/category/videos/programming.do">at O’Reilly</a>
           by
-          <a href="http://delicious-insights.com">Delicious Insights</a>
+          <a href="http://delicious-insights.com">Delicious Insights test-mark</a>
         </p>
         <p>
           <a href="http://shop.oreilly.com/category/videos/programming.do" class="btn btn-primary btn-lg">
